[package]
name = "rasp"
version = "0.2.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

description = """
Rust library for RASP(https://www.thrustcurve.org/info/raspformat.html) file format.
"""
repository = "https://github.com/sk2sat/rasp"
readme = "README.md"
license = "MIT"

categories = ["parsing"]

[dev-dependencies]
ureq = "1.5.2"
